<resources>
    <string name="app_name">Fewer</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_refresh">Refresh</string>

    <string name="feedList_open">Open feed list</string>
    <string name="feedList_close">Close feed list</string>

    <string name="feed_icon">Feed Icon</string>

    <!-- Nav titles -->
    <string name="title_all_feeds">All Feeds</string>

    <!-- Preference keys -->
    <string name="pref_server">server</string>
    <string name="pref_serverTest">serverTest</string>
    <string name="pref_username">username</string>
    <string name="pref_password">password</string>
    <string name="pref_hash">hash</string>
    <string name="pref_background">background</string>
    <string name="pref_currentMaxId">currentMaxId</string>
    <string name="pref_daynight">daynight</string>

    <!-- Toast messages -->
    <string name="test_success">Connection successful!</string>
    <string name="test_noauth">Invalid username or password</string>
    <string name="test_error">Error connecting: %s</string>

    <!-- Preference Titles -->
    <string name="server_header">Server</string>
    <string name="interface_header">Interface</string>
    <string name="updating_header">Feed updating</string>

    <!-- Preferences -->
    <string name="server_title">Fever Server URL</string>
    <string name="username_title">Username</string>
    <string name="password_title">Password</string>
    <string name="password_summary">Set your API password</string>
    <string name="server_test_title">Test Server</string>
    <string name="background_title">Update in Background</string>
    <string name="dayNight_title">Day/Night Mode</string>

    <!-- Notification -->
    <string name="notif_title">Fewer</string>
    <string name="notif_content">New feed items.</string>
</resources>
