<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/server_header">
        <EditTextPreference
            android:inputType="none"
            app:key="@string/pref_server"
            app:title="@string/server_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="@string/pref_username"
            app:title="@string/username_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:inputType="textPassword"
            app:key="@string/pref_password"
            app:summary="@string/password_summary"
            app:title="@string/password_title" />

        <EditTextPreference
            app:isPreferenceVisible="false"
            app:key="@string/pref_hash" />

        <Preference
            app:key="@string/pref_serverTest"
            app:title="@string/server_test_title" />
    </PreferenceCategory>
</PreferenceScreen>
